create Navbar, link with theme

--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,6 +1,9 @@
 .app.light {
-  --bg-color: #fff;
+  --bg-color: #fbfcfe;
+  --secondary-bg-color: #fff;
 
   --primary-color: #090909;
   --secondary-color: #ffa500;
+  --inverted-primary-color: #FFFFFF;
+  --inverted-secondary-color: #C778DD;
 }
