--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,9 @@
 .app.dark {
   --bg-color: #191919;
+  --secondary-bg-color: #1f1f1f;
 
   --primary-color: #FFFFFF;
   --secondary-color: #C778DD;
+  --inverted-primary-color: #090909;
+  --inverted-secondary-color: #ffa500;
 }
