--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -5,6 +5,7 @@
 
   position: relative;
   transition: width 0.2s;
+  color: var(--primary-color);
 }
 
 
@@ -18,4 +19,8 @@
   display: flex;
   justify-content: center;
   width: 100%;
+}
+
+.lang {
+  margin-left: 10px;
 }
