--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,9 +1,8 @@
 .app.dark {
-  --bg-color: #191919;
-  --secondary-bg-color: #1f1f1f;
-
-  --primary-color: #FFFFFF;
-  --secondary-color: #C778DD;
-  --inverted-primary-color: #090909;
-  --inverted-secondary-color: #ffa500;
+    --bg-color: #191919;
+    --secondary-bg-color: #1f1f1f;
+    --primary-color: #fff;
+    --secondary-color: #c778dd;
+    --inverted-primary-color: #090909;
+    --inverted-secondary-color: #ffa500;
 }
