--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,9 +1,8 @@
 .app.light {
-  --bg-color: #fbfcfe;
-  --secondary-bg-color: #fff;
-
-  --primary-color: #090909;
-  --secondary-color: #ffa500;
-  --inverted-primary-color: #FFFFFF;
-  --inverted-secondary-color: #C778DD;
+    --bg-color: #fbfcfe;
+    --secondary-bg-color: #fff;
+    --primary-color: #090909;
+    --secondary-color: #ffa500;
+    --inverted-primary-color: #fff;
+    --inverted-secondary-color: #c778dd;
 }
