--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,6 @@
 .app.dark {
-    --bg-color: #191919;
-    --secondary-bg-color: #1f1f1f;
+    --bg-color: #1f1f1f;
+    --secondary-bg-color: #191919;
     --primary-color: #fff;
     --secondary-color: #c778dd;
     --inverted-primary-color: #090909;
