--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,6 +1,6 @@
 .app.light {
-    --bg-color: #fbfcfe;
-    --secondary-bg-color: #fff;
+    --bg-color: #fff;
+    --secondary-bg-color: #fbfcfe;
     --primary-color: #090909;
     --secondary-color: #ffa500;
     --inverted-primary-color: #fff;
