create article details card, create articleCodeBlockComponent, articleTextBlockComponent, articleImageBlockComponent, create Code ui component, update Text ui, add tests and stories

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -5,4 +5,5 @@
     --secondary-color: #c778dd;
     --inverted-primary-color: #090909;
     --inverted-secondary-color: #ffa500;
+    --code-bg: #191919;
 }
