--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -5,4 +5,5 @@
     --secondary-color: #ffa500;
     --inverted-primary-color: #fff;
     --inverted-secondary-color: #c778dd;
+    --code-bg: #fbfcfe;
 }
