--- a/src/app/styles/themes/teal.scss
+++ b/src/app/styles/themes/teal.scss
@@ -5,4 +5,5 @@
     --secondary-color: #84a98c;
     --inverted-primary-color: #384f52;
     --inverted-secondary-color: #f4fbfb;
+    --code-bg: #2f3e46;
 }
