--- a/src/entities/Article/ui/ArticleDetails/ArticleDetails.module.scss
+++ b/src/entities/Article/ui/ArticleDetails/ArticleDetails.module.scss
@@ -1,11 +1,21 @@
-.ArticleDetails {
-    min-height: 100%;
-}
-
 .loading,
 .error {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 80vh;
+}
+
+.avatarWrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.articleInfo {
+    display: flex;
+    gap: 10px;
+}
+
+.block {
+    margin-top: 16px;
 }
