--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -1,5 +1,53 @@
+.ArticleListItem a {
+    text-decoration: none;
+}
+
+.BIG {
+    .header {
+        display: flex;
+        align-items: center;
+    }
+
+    .user {
+        display: flex;
+        gap: 10px;
+        align-items: center;
+    }
+
+    .date {
+        margin-left: auto;
+    }
+
+    .img {
+        width: 100%;
+        max-height: 400px;
+        object-fit: cover;
+        margin: 10px 0;
+    }
+
+    .textBlock {
+        max-height: 210px;
+        overflow-y: hidden;
+    }
+
+    .footer {
+        display: flex;
+        align-items: center;
+        margin-top: 10px;
+    }
+
+    .views {
+        margin-left: auto;
+        margin-right: 5px;
+    }
+}
+
 .SMALL {
     width: 220px;
+
+    .card {
+        cursor: pointer;
+    }
 
     .date {
         position: absolute;
@@ -26,6 +74,7 @@
     .img {
         width: 200px;
         height: 200px;
+        object-fit: cover;
     }
 
     .info {
