--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -43,7 +43,7 @@
 }
 
 .SMALL {
-    width: 220px;
+    width: 300px;
 
     .card {
         cursor: pointer;
@@ -66,14 +66,12 @@
     }
 
     .imgWrapper {
-        width: 200px;
-        height: 200px;
         position: relative;
     }
 
     .img {
-        width: 200px;
-        height: 200px;
+        width: 100%;
+        height: 280px;
         object-fit: cover;
     }
 
@@ -96,7 +94,7 @@
     }
 
     .title p {
-        width: 200px;
+        width: 280px;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
