--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -1,9 +1,9 @@
 .Sidebar {
     height: calc(100vh - var(--navbar-height));
-    width: var(--sidebar-width);
+    min-width: var(--sidebar-width);
     background: var(--secondary-bg-color);
     position: relative;
-    transition: width 0.2s;
+    transition: min-width 0.2s;
     color: var(--primary-color);
 }
 
@@ -34,7 +34,7 @@
 }
 
 .collapsed {
-    width: var(--sidebar-width-collapsed);
+    min-width: var(--sidebar-width-collapsed);
 
     .switchers {
         flex-direction: column;
