style scroll, fix style input and article list

--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -1,9 +1,10 @@
 .InputWrapper {
     display: flex;
+    gap: 5px;
 }
 
 .placeholder {
-    margin-right: 5px;
+    white-space: nowrap;
 }
 
 .input {
