--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -14,3 +14,17 @@
 .content-page {
     display: flex;
 }
+
+*::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+}
+
+*::-webkit-scrollbar-track {
+    background: var(--secondary-bg-color);
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: var(--bg-color);
+    border: 1px solid var(--primary-color);
+}
