--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -14,3 +14,12 @@
 .mainLink {
     margin-right: 20px;
 }
+
+.appName {
+    width: var(--sidebar-width);
+    margin-left: 10px;
+}
+
+.createLink {
+    margin-left: 10px;
+}
