--- a/src/shared/ui/Card/Card.module.scss
+++ b/src/shared/ui/Card/Card.module.scss
@@ -6,6 +6,10 @@
     background: var(--secondary-bg-color);
 }
 
+.secondary {
+    background: var(--bg-color);
+}
+
 .outlined {
     border: 1px solid var(--primary-color);
 }
