--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -4,7 +4,8 @@
 @import "themes/dark";
 @import "themes/teal";
 
-.app,body {
+.app,
+body {
     font: var(--font-m);
     color: var(--primary-color);
     background: var(--bg-color);
